--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -1696,6 +1696,19 @@
   timestamp = {2016.04.29}
 }
 
+@ARTICLE{Stockdon2006,
+  author = {Hilary F. Stockdon and Rob A. Holman and Peter A. Howd and Asbury H. Sallenger},
+  title = {Empirical parameterization of setup, swash, and runup},
+  journal = {Coastal Engineering},
+  year = {2006},
+  volume = {53},
+  pages = {573-588},
+  number = {7},
+  issn = {0378-3839},
+  doi = {https://doi.org/10.1016/j.coastaleng.2005.12.005},
+  url = {https://www.sciencedirect.com/science/article/pii/S0378383906000044},
+}
+
 @ARTICLE{Tan2013,
   author = {Tan, Lihai and Zhang, Weimin and Qu, Jianjun and Zhang, Kecun and
 	An, Zhishan and Wang, Xiao},
