--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -145,6 +145,20 @@
   timestamp = {2015.05.26}
 }
 
+@article{Baird1998,
+abstract = {A numerical solution to the 1-D Boussinesq ground water equation is used to predict water table response to tidal and wave forcing. We argue that the solution presented here offers considerable advantages over other solutions to the 1-D Boussinesq ground water equation and is simpler to apply than 2-D ground water models. The main assumption in using the Boussinesq equation is that ground water flow in a shallow aquifer can be described using the Dupuit-Forchheimer approximation, in which it is assumed that changes in hydraulic head with depth below the water table are negligible. The predictive ability of the solution was tested against field data from ten wells and ten piezometers on a microtidal sandy beach. Two model runs were carried out: in the first the effect of tides only was considered; in the second setup due to waves was also considered. The arithmetic mean of independently measured values of hydraulic conductivity was used to describe sediment characteristics. The piezometer data show that changes in hydraulic head with depth are negligible for much of the beach, suggesting that the use of the Boussinesq equation is appropriate. The correspondence between model predictions of water table elevations and field observations is good for both the tide-only and the tide plus setup model runs, with the latter giving the better predictions.},
+author = {Baird, Andrew J. and Mason, Travis and Horn, Diane P.},
+doi = {10.1016/S0025-3227(98)00026-7},
+issn = {00253227},
+journal = {Marine Geology},
+keywords = {Beach water table,Boussinesq equation,Model validation},
+number = {1-2},
+pages = {55--69},
+title = {{Validation of a Boussinesq model of beach ground water behaviour}},
+volume = {148},
+year = {1998}
+}
+
 @ARTICLE{Barchyn2015,
   author = {Barchyn, T. E. and Hugenholtz, C. H.},
   title = {Predictability of dune activity in real dune fields under unidirectional
@@ -244,6 +258,19 @@
   note = {38 pp},
   owner = {hoonhout},
   timestamp = {2014.06.11}
+}
+
+@article{Brakenhoff2019,
+author = {Brakenhoff, Laura B. and Smit, Yvonne and Donker, Jasper J.A. and Ruessink, Gerben},
+doi = {10.1002/esp.4493},
+issn = {10969837},
+journal = {Earth Surface Processes and Landforms},
+keywords = {beach surface moisture,groundwater,sand engine,tidal variations},
+number = {1},
+pages = {317--330},
+title = {{Tide-induced variability in beach surface moisture: Observations and modelling}},
+volume = {44},
+year = {2019}
 }
 
 @ARTICLE{Buscombe2010,
@@ -1066,6 +1093,15 @@
   timestamp = {2014.06.11}
 }
 
+@inproceedings{Kang1994,
+author = {Kang, H.Y. and Nielsen, P. and Hanslow, D.J},
+booktitle = {Coastal Engineering 1994},
+keywords = {pter 153,watertable overheight due to,wave runup},
+pages = {2115--2124},
+title = {{Watertable overheight due to wave runup on a sandy beach}},
+year = {1994}
+}
+
 @TECHREPORT{Kawamura1951,
   author = {Kawamura, R},
   title = {Study of sand movement by wind},
@@ -1358,6 +1394,34 @@
   timestamp = {2015.05.26}
 }
 
+@techreport{Nielsen1988,
+author = {Nielsen, P and Davis, GA and Winterbourne, JM and Elias, G},
+pages = {132},
+title = {{Wave setup and the watertable in sandy beaches, Technical Report Technical Memo- randum 88/1, New South Wales Public Works Department Coastal Branch}},
+year = {1988}
+}
+
+@article{Nielsen1990,
+abstract = {Tidal motions of the water table height inside a sloping beach are investigated via field measurements and theoretical considerations. Only the movements forced by the tide are considered, so a beach with negligible wave activity was chosen for the field measurements. The data show that even in the absence of precipitation the time averaged inland water table stands considerably above the mean sea level. Also the water table at a fixed point inside the beach is far from sinusoidal even though its variation is forced by an essentially sinusoidal tide. This latter effect is due to the boundary condition along the sloping beach face which acts as a highly nonlinear filter. The observed behavior of the water table is explained in terms of perturbation extensions to the classical “deep aquifer solution.” One extension deals with the nonlinearity in the interior, the other with the boundary condition at the sloping beach face. Copyright 1990 by the American Geophysical Union.},
+author = {Nielsen, Peter},
+doi = {10.1029/WR026i009p02127},
+issn = {19447973},
+journal = {Water Resources Research},
+number = {9},
+pages = {2127--2134},
+title = {{Tidal dynamics of the water table in beaches}},
+volume = {26},
+year = {1990}
+}
+
+@book{Nielsen2009,
+author = {Nielsen, Peter},
+pages = {358},
+publisher = {World Scientific Publishing Company},
+title = {{Coastal and estuarine processes}},
+year = {2009}
+}
+
 @ARTICLE{Okin2008,
   author = {Okin, G S},
   title = {A new model of wind erosion in the presence of vegetation},
@@ -1430,6 +1494,20 @@
   address = {London},
   owner = {hoonhout},
   timestamp = {2016.06.15}
+}
+
+@article{Raubenheimer1999,
+abstract = {Tidal water table fluctuations observed for 27 days in a gently sloped ocean beach are predicted well by numerical models based on the Boussinesq equation driven with the observed 10 min-averaged shoreline (ocean-beach intersection) motion. Diurnal and semidiurnal water table fluctuations are almost completely damped 100 m landward of the mean shoreline location on this fine-grained sand beach, but fluctuations at spring-neap periods (≃14 days) are attenuated less. Comparison of the observations with the predictions suggests that the asymmetries in the water table level time series measured in this study result from nonlinearity owing to the large (relative to the wavelength) horizontal shoreline excursions, rather than from nonlinearity owing to finite-amplitude water table fluctuations. Cross-shore variations of the aquifer depth are predicted to have a small effect on the landward decay rate of the water table fluctuations. The seepage face width is predicted accurately and depends on the nonplanar beach profile. In general, the development of a seepage face is predicted to have little effect on the water table level landward of the intertidal region.},
+author = {Raubenheimer, B. and Guza, R. T. and Elgar, Steve},
+doi = {10.1029/1999WR900105},
+issn = {00431397},
+journal = {Water Resources Research},
+keywords = {http://dx.doi.org/10.1029/1999WR900105, doi:10.102},
+number = {8},
+pages = {2313--2320},
+title = {{Tidal water table fluctuations in a sandy ocean beach}},
+volume = {35},
+year = {1999}
 }
 
 @ARTICLE{Raupach1993,
@@ -1595,6 +1673,14 @@
   owner = {hoonhout},
   publisher = {Springer},
   timestamp = {2015.10.01},
+}
+
+@article{Schmutz2014,
+author = {Schmutz, Phillip P},
+file = {:C\:/Users/Caroline Hallin/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Schmutz - 2014 - Investigation of Factors Controlling the Dynamics of Beach Surface Moisture.pdf:pdf},
+number = {August},
+title = {{Investigation of Factors Controlling the Dynamics of Beach Surface Moisture}},
+year = {2014}
 }
 
 @ARTICLE{Sherman1998,
