--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -1396,6 +1396,7 @@ year = {1994}
 
 @techreport{Nielsen1988,
 author = {Nielsen, P and Davis, GA and Winterbourne, JM and Elias, G},
+institution = {-},
 pages = {132},
 title = {{Wave setup and the watertable in sandy beaches, Technical Report Technical Memo- randum 88/1, New South Wales Public Works Department Coastal Branch}},
 year = {1988}
