--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -1684,6 +1684,14 @@ title = {{Investigation of Factors Controlling the Dynamics of Beach Surface Moi
 year = {2014}
 }
 
+@PHDTHESIS{Schmutz2014,
+  author = {Schmutz, Phillip P},
+  title = {Investigation of Factors Controlling the Dynamics of Beach Surface Moisture},
+  school = {Louisiana State University},
+  year = {2014}
+}
+
+
 @ARTICLE{Sherman1998,
   author = {Sherman, Douglas J and Jackson, Derek WT and Namikas, Steven L and
 	Wang, Jinkang},
