--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -608,6 +608,20 @@ year = {2019}
   timestamp = {2014.03.07}
 }
 
+@article{VanGenuchten1980,
+abstract = {Tortuosity phenomena of pore spare influence the transport of water, solutes, and gases in soil. This study presents three analyses linking tortuosity and transport in unsaturated soil. The first is a diffusion-based analysis of tortuosity in the soil water and soil air phases, related to soil surface area (SA) and pore-size distribution (PSD) (characterized by Campbell b and content of pores > 30 mum). The analysis is based on recent models to predict the diffusion coefficients, D-p, of (i) a solute in soil, (ii) a gas in repacked soil, and (iii) a gas in undisturbed soil, each as a function of fluid-phase (soil water or soil air) content, alpha. For use in the analysis, the relation between SA and the threshold water content where solute diffusion ceases due to disconnected water films was measured for eight soils (5-46% clay). The tortuosity analysis supported by measured D-p(alpha) data shows that SA governs and has a larger impact on liquid-phase tortuosity than PSD has on gaseous-phase tortuosity, At the same value of a, the tortuosity is typically larger in the soil water than in the soil air phase, and the difference becomes more pronounced with increasing SA and at low alpha. In the second analysis air permeability, k(a), and gas diffusivity, D-P,D-g, are linked in the Millington and Quirk fluid now model to describe soil structure-forming potential and to establish a model platform to describe k(a) as a function of D-P,D-g and alpha. Measurements on repacked, nonaggregated soil support the k(a)(D-P,D-g;alpha) model platform, while measurements on repacked, aggregated soils and on undisturbed soils show that k(a) is greatly affected by soil aggregation and structure and D-P,D-g is not, In the third analysis, a constitutive parameter model is applied to gas and solute diffusivities and air and water permeabilities in six soils along a soil texture gradient. This illustrates the different behavior of the four transport parameters with PSD and alpha. The liquid-phase transport parameters show a steeper decrease with a compared with the gaseous-phase parameters, in part due to the higher tortuosity in the liquid phase. Also, k(a) in undisturbed soil exhibited a less steep decrease with alpha compared with D-P,D-g, probably due to preferential air flow in larger pores during convective transport. Any attempt to develop a unifying and PSD-dependent model for transport parameters in the soil liquid and gaseous phases Hill require careful distinction between repacked and undisturbed soils.},
+author = {van Genuchten, M. Th},
+doi = {10.2136/sssaj1980.03615995004400050002x},
+isbn = {0361599500440},
+issn = {03615995},
+journal = {Soil Science Society of America Journal},
+number = {5},
+pages = {892--898},
+title = {{Closed-Form Equation for Predicting the Hydraulic Conductivity of Unsaturated Soils.}},
+volume = {44},
+year = {1980}
+}
+
 @ARTICLE{Gillette1989,
   author = {Gillette, Dale A and Stockton, Paul H},
   title = {The effect of nonerodible particles on wind erosion of erodible surfaces},
@@ -1352,6 +1366,16 @@ year = {1994}
 	wind tunnel},
   owner = {hoonhout},
   timestamp = {2015.06.15}
+}
+
+@article{Mualem1974,
+author = {Mualem, Y},
+journal = {Water Resources Research},
+number = {3},
+pages = {514--520},
+title = {{A Conceptual Model of Hysteresis}},
+volume = {10},
+year = {1974}
 }
 
 @ARTICLE{Namikas2010,
