--- a/examples/deVries2023/Run 1 - Fetch effects and spatial variability in supply/Run1.ipynb
+++ b/examples/deVries2023/Run 1 - Fetch effects and spatial variability in supply/Run1.ipynb
@@ -3357,7 +3357,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
