--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -14,6 +14,90 @@
   timestamp = {2014.03.07}
 }
 
+@article{DuranMoore2013,
+  author = {Durán, O. and Moore, L. J.},
+  title = {Vegetation controls on the maximum size of coastal dunes},
+  journal = {Proceedings of the National Academy of Sciences},
+  year = {2013},
+  volume = {110},
+  number = {43},
+  pages = {17217–17222},
+  doi = {10.1073/pnas.1307580110},
+}
+
+@article{Keijsers2016,
+  author = {Keijsers, J. G. S., de Groot, A. V., and Riksen, M. J. P. M.},
+  title = {Modeling the biogeomorphic evolution of coastal dunes in response to climate change},
+  journal = {Journal of Geophysical Research: Earth Surface},
+  year = {2016},
+  volume = {121},
+  pages = {1161–1181},
+  doi = {10.1002/2015JF003815},
+}
+
+@article{DuranHerrmann2006b,
+  author = {Durán, O. and Herrmann, H. J.},
+  title = {Vegetation against dune mobility},
+  journal = {Physical Review Letters},
+  year = {2006},
+  volume = {97},
+  number = {18},
+  pages = {1–4},
+  doi = {10.1103/PhysRevLett.97.188001},
+}
+
+@article{Strypsteen2024,
+  author = {Strypsteen, G. and Bonte, D. and Taelman, C. and Derijckere, J. and Rauwoens, P.},
+  title = {Three years of morphological dune development after planting marram grass on a beach},
+  journal = {Earth Surface Processes and Landforms},
+  year = {2024},
+  doi = {10.1002/esp.5870},
+}
+
+@article{Nolet2018,
+  author = {Nolet, C. and van Puijenbroek, M. and Suomalainen, J. and Limpens, J. and Riksen, M.},
+  title = {UAV-imaging to model growth response of marram grass to sand burial: Implications for coastal dune development},
+  journal = {Aeolian Research},
+  year = {2018},
+  volume = {31},
+  pages = {50–61},
+  note = {March 2017},
+  doi = {10.1016/j.aeolia.2017.08.006},
+}
+
+@article{Maun1998,
+  author = {Maun, M. A.},
+  title = {Adaptations of plants to burial in coastal sand dunes},
+  journal = {Canadian Journal of Botany},
+  year = {1998},
+  volume = {76},
+  number = {5},
+  pages = {713–738},
+  doi = {10.1139/cjb-76-5-713},
+}
+
+@article{Danin1991,
+  author = {Danin, A.},
+  title = {Plant adaptations in desert dunes},
+  journal = {Journal of Arid Environments},
+  year = {1991},
+  volume = {21},
+  number = {2},
+  pages = {193–212},
+  doi = {10.1016/s0140-1963(18)30682-7},
+}
+
+@article{Hesp1991,
+  author = {Hesp, P. A.},
+  title = {Ecological processes and plant adaptations on coastal dunes},
+  journal = {Journal of Arid Environments},
+  year = {1991},
+  volume = {21},
+  number = {2},
+  pages = {165–191},
+  doi = {10.1016/s0140-1963(18)30681-5},
+}
+
 @article{Aagaard2014,
   author = {Aagaard, T.},
   title = {Sediment supply to beaches: Cross-shore sand transport on the lower shoreface},
