--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -25,6 +25,14 @@
   doi = {10.1073/pnas.1307580110},
 }
 
+@article{Strypsteen2024,
+  author = {Strypsteen, G. and Bonte, D. and Taelman, C. and Derijckere, J. and Rauwoens, P.},
+  title = {Vertical Growth Rate of Planted Vegetation Controls Dune Growth on a Sandy Beach},
+  journal = {Coastal Engineering},
+  year = {2024},
+  doi = {10.2139/ssrn.4872614},
+}
+
 @article{Keijsers2016,
   author = {Keijsers, J. G. S., de Groot, A. V., and Riksen, M. J. P. M.},
   title = {Modeling the biogeomorphic evolution of coastal dunes in response to climate change},
