--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -34,7 +34,7 @@
 }
 
 @article{Keijsers2016,
-  author = {Keijsers, J. G. S., de Groot, A. V., and Riksen, M. J. P. M.},
+  author = {Keijsers, J. G. S., de Groot, A. V. and Riksen, M. J. P. M.},
   title = {Modeling the biogeomorphic evolution of coastal dunes in response to climate change},
   journal = {Journal of Geophysical Research: Earth Surface},
   year = {2016},
