--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -14,6 +14,16 @@
   timestamp = {2014.03.07}
 }
 
+@article{Keijsers2016,
+  author = {Keijsers, J. G. S. and de Groot, A. V. and Riksen, M. J. P. M.},
+  title = {Modeling the biogeomorphic evolution of coastal dunes in response to climate change},
+  journal = {Journal of Geophysical Research: Earth Surface},
+  year = {2016},
+  volume = {121},
+  pages = {1161–1181},
+  doi = {10.1002/2015JF003815},
+}
+
 @article{DuranMoore2013,
   author = {Durán, O. and Moore, L. J.},
   title = {Vegetation controls on the maximum size of coastal dunes},
