--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -54,7 +54,7 @@
   doi = {10.1103/PhysRevLett.97.188001},
 }
 
-@article{Strypsteen2024,
+@article{Strypsteen2024b,
   author = {Strypsteen, G. and Bonte, D. and Taelman, C. and Derijckere, J. and Rauwoens, P.},
   title = {Three years of morphological dune development after planting marram grass on a beach},
   journal = {Earth Surface Processes and Landforms},
