Solve minor layout issues

--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -43,7 +43,7 @@
   doi = {10.2139/ssrn.4872614},
 }
 
-@article{DuranHerrmann2006b,
+@article{DuranHerrmann2006,
   author = {Durán, O. and Herrmann, H. J.},
   title = {Vegetation against dune mobility},
   journal = {Physical Review Letters},
