Dropdown menu added
Added the dropdown menu
Fixed some bugs

--- a/docs/aeolis.bib
+++ b/docs/aeolis.bib
@@ -73,6 +73,19 @@
   doi = {10.1016/j.aeolia.2017.08.006},
 }
 
+@article{VANWESTEN2024106093,
+title = {AeoLiS: Numerical modelling of coastal dunes and aeolian landform development for real-world applications},
+journal = {Environmental Modelling & Software},
+volume = {179},
+pages = {106093},
+year = {2024},
+issn = {1364-8152},
+doi = {https://doi.org/10.1016/j.envsoft.2024.106093},
+url = {https://www.sciencedirect.com/science/article/pii/S1364815224001543},
+author = {Bart {van Westen} and Sierd {de Vries} and Nicholas Cohn and Christa {van IJzendoorn} and Glenn Strypsteen and Caroline Hallin},
+keywords = {Aeolian sediment transport, Dune vegetation, Dune geomorphology, Blowout, Embryo dune, Parabolic dune},
+}
+
 @article{Maun1998,
   author = {Maun, M. A.},
   title = {Adaptations of plants to burial in coastal sand dunes},
